--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 					<div class="product-side__content-table">
 						<div class="product-side__content-table-img">
-							<img class="lazyload img-fluid d-block mx-auto mt-5" data-src="../includes/img/item1.png" alt="">
+							<img class="lazyload img-fluid d-block mx-auto mt-5" data-src="./images/item1.png" alt="">
 						</div>
 
 						<div class="product-side__content-table_content">
@@ -353,7 +353,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<hr>
 							<p class="price__total">Total: <span class="price__total">$79</span></p>
 
-							<img class="lazyload img-fluid d-block mx-auto buy-btn" data-src="../includes/img/buynow-1.png">
+							<img class="lazyload img-fluid d-block mx-auto buy-btn" data-src="../images/buynow-1.png">
 							<p class="mb-0"><strong>+ Small <span class="d-inline-block">shipping fee</span></strong></p>
 							
 							<p class="text-center mb-2">Savings: $20</p>
@@ -375,8 +375,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<div class="product-mid__content-table">
 
 						<div class="product-side__content-table-img">
-							<img class="lazyload product__badge" data-src="../includes/img/item3-badge.png" alt="">
-							<img class="lazyload img-fluid d-block mx-auto mt-5" data-src="../includes/img/item3.png" alt="">
+							<img class="lazyload product__badge" data-src="../images/item3-badge.png" alt="">
+							<img class="lazyload img-fluid d-block mx-auto mt-5" data-src="../images/item3.png" alt="">
 						</div>
 
 						<div class="product-side__content-table_content">
@@ -384,7 +384,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<hr>
 							<p class="price__total">Total: <span class="price__total">$294</span></p>
 
-							<img class="lazyload img-fluid d-block mx-auto buy-btn" data-src="../includes/img/buynow-2.png">
+							<img class="lazyload img-fluid d-block mx-auto buy-btn" data-src="../images/buynow-2.png">
 							
 							<p class="mb-0 text-success">
 								<i class="fas fa-shipping-fast"></i>
@@ -408,8 +408,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 					<div class="product-side__content-table">
 						<div class="product-side__content-table-img">
-							<img class="lazyload product__badge" data-src="../includes/img/item2-badge.png" alt="">
-							<img class="lazyload img-fluid d-block mx-auto mt-2rem" data-src="../includes/img/item2.png" alt="">
+							<img class="lazyload product__badge" data-src="../images/item2-badge.png" alt="">
+							<img class="lazyload img-fluid d-block mx-auto mt-2rem" data-src="../images/item2.png" alt="">
 						</div>
 
 						<div class="product-side__content-table_content">
@@ -417,7 +417,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<hr>
 							<p class="price__total">Total: <span class="price__total">$177</span></p>
 
-							<img class="lazyload img-fluid d-block mx-auto buy-btn" data-src="../includes/img/buynow-1.png">
+							<img class="lazyload img-fluid d-block mx-auto buy-btn" data-src="../images/buynow-1.png">
 							<p class="mb-1">
 								<i class="fas fa-shipping-fast"></i>
 								<strong> + Free US shipping</strong>
