--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 					<div class="product-side__content-table">
 						<div class="product-side__content-table-img">
-							<img class="lazyload img-fluid d-block mx-auto mt-5" data-src="./images/item1.png" alt="">
+							<img class="lazyload img-fluid d-block mx-auto mt-5" data-src="../images/item1.png" alt="">
 						</div>
 
 						<div class="product-side__content-table_content">
