--- a/index.html
+++ b/index.html
@@ -479,13 +479,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				<img src="images/logo.png" class="img-fluid logo pb-5">
 
-				<p><a href="../contact/" target="_blank">Contact</a></p>
-				<p><a href="../help/terms.php" target="_blank">Terms of Use</a></p>
-				<p><a href="../help/disclaimer.php" target="_blank">Disclaimer</a></p>
-				<p><a href="../help/references.php" target="_blank">References</a></p>
-				<p><a href="../help/privacy.php" target="_blank">Privacy Policy</a></p>
-				<p><a href="../help/shipping.php" target="_blank">Shipping Policy</a></p>
-				<p><a href="../help/refunds.php" target="_blank">Refund Policy</a></p>
+				<p><a href="https://vidacalm.com/contact/" target="_blank">Contact</a></p>
+				<p><a href="https://vidacalm.com/help/terms.php" target="_blank">Terms of Use</a></p>
+				<p><a href="https://vidacalm.com/help/disclaimer.php" target="_blank">Disclaimer</a></p>
+				<p><a href="https://vidacalm.com/help/references.php" target="_blank">References</a></p>
+				<p><a href="https://vidacalm.com/help/privacy.php" target="_blank">Privacy Policy</a></p>
+				<p><a href="https://vidacalm.com/help/shipping.php" target="_blank">Shipping Policy</a></p>
+				<p><a href="https://vidacalm.com/help/refunds.php" target="_blank">Refund Policy</a></p>
 				<p><a href="https://www.redwindowrock.com/o-jlfr-j63-06c48ebf33160ccd043a8bbd3f74d911" target="_blank">Unsubscribe</a></p>
 			</div>
 
